# ROS_xarm_planning

ROS_xarm_planning/ROS_xarm_planning/catkin_ws/src/xarm_ros/: ReadMe_cn.md
ROS_xarm_planning/ROS_xarm_planning/catkin_ws/src/xarm_ros/xarm7_moveit_config/config/: controllers_slider.yaml  joint_limits_slider.yaml  xarm7_params_slider.yaml
ROS_xarm_planning/ROS_xarm_planning/catkin_ws/src/xarm_ros/xarm7_moveit_config/launch/: gazebo_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz_common.launch  planning_context.launch  trajectory_execution.launch.xml  xarm7_moveit_controller_manager.launch.xml
ROS_xarm_planning/ROS_xarm_planning/catkin_ws/src/xarm_ros/xarm_controller/launch/: xarm7_control.launch
ROS_xarm_planning/ROS_xarm_planning/catkin_ws/src/xarm_ros/xarm_description/launch/: display_slider.rviz
ROS_xarm_planning/ROS_xarm_planning/catkin_ws/src/xarm_ros/xarm_description/srdf/: _xarm7_macro.srdf.xacro
ROS_xarm_planning/ROS_xarm_planning/kyle_liu_test/kyle_liu_test/: CMakeLists.txt  package.xml
ROS_xarm_planning/ROS_xarm_planning/kyle_liu_test/kyle_liu_test/config/: xarm_hardware_sim.yaml  xarm_hardware_sim_slider.yaml  xarm_rviz_config.rviz
ROS_xarm_planning/ROS_xarm_planning/kyle_liu_test/kyle_liu_test/launch/: display.launch  launch_robot.launch  moveit_planning.launch  sim_hardware.launch
ROS_xarm_planning/ROS_xarm_planning/kyle_liu_test/kyle_liu_test/resources/: collision_object_listener.py
ROS_xarm_planning/ROS_xarm_planning/kyle_liu_test/kyle_liu_test/scripts/: pyassimptest.py  test.py
(+10 files in other folders)
