<?xml version="1.0"?>
<package format="2">
  <name>kyle_liu_test</name>
  <version>0.0.1</version>
  <description>kyle_liu_test</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <depend>rospy</depend>

</package>
